tests/out/error/ident/undefined.in.bt
if bad_name {}

where = 1

os.import_missing()

_ := xyz == 23
_ := 45 != qwe
